--- a/style.css
+++ b/style.css
@@ -1,5 +1,23 @@
+header {
+    margin: 25px;
+    color: antiquewhite;
+}
+
+
 body {
     background-image: url('images/headerpic.webp');
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size:cover;
+    overflow-x: hidden;
+}
+
+#todayDiv {
+    position: relative;
+    left: 400px;
+    top:-100px;
+}
+
+#fiveDay {
+    position: relative;
+    left: 400px;
 }
